# alert-autoconf

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.validate  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
alert_autoconf/: __init__.py  config.py  defaults.py  models.py  moira.py  teamcity.py
etc/: example.yaml
tests/: invalid_config.yaml  test_alert.py  test_deploy.yaml  test_subscription.py  valid_config.yaml  valid_config_blank.yaml  valid_config_second.yaml  valid_config_subscriptions_schedule.yaml
