[metadata]
name = alert-autoconf
version = 0.4.22
description = Alerting auto generation by config yaml file
platforms = any
classifiers =
    Programming Language :: Python
    Operating System :: POSIX :: Linux
    Topic :: System :: Systems Administration

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.
scripts =
    bin/alert.py
    bin/setdefaults.py
    bin/validate.py
install_requires =
    moira-client==2.4.8
    PyYAML==5.2
    redis==3.2.1
    pydantic==1.2
python_requires = >=3.7

[options.packages.find]
where = .
exclude =
    tests

[options.extras_require]
testing =
    pytest-black==0.3.7
    pytest-cover==3.0.0
    pytest-flake8==1.0.4
    pytest-mock==1.10.4
    pytest-runner==4.4
    pytest==4.4.0
development =
    black==19.3b0
    flake8-builtins==1.0.post0
    flake8-debugger==3.0.0
    flake8-docstrings==1.1.0
    flake8-print==3.0.1
    flake8-quotes==0.13.0
    flake8==3.5.0
    pep8-naming==0.4.1
    pycodestyle==2.3.1
    pydocstyle<4.0.0
    rope==0.14.*
    setuptools-black==0.1.4

[tool:pytest]
addopts =
    --cov alert_autoconf
    --cov-report term-missing
    --cov-report html
    --flake8
    --black
    --verbose
    .
norecursedirs =
    .eggs
    .tox
    .vscode
    build
    dist
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload
test = pytest

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
formats = bdist_wheel
